rs-smithy/common/modules/cloudwatch/tree-sitter-cloudwatch-insights/test/corpus/comments/comments1.txt
================================================================================
Comments 1
================================================================================

# comment
stats avg (f1) by f2 

--------------------------------------------------------------------------------

(source_file
  (comment)
  (stats_statement
    (by_expression
      (call_expression
        (identifier)
        (arguments
          (identifier)))
      (identifier))))
