rs-smithy/common/modules/cloudwatch/tree-sitter-cloudwatch-insights/test/corpus/expressions1.txt
================================================================================
Expressions 1
================================================================================

stats avg (f1) by f2

--------------------------------------------------------------------------------

(source_file
  (stats_statement
    (by_expression
      (call_expression
        (identifier)
        (arguments
          (identifier)))
      (identifier))))
