rs-smithy/common/modules/cloudwatch/tree-sitter-cloudwatch-insights/test/corpus/fields1.txt
================================================================================
Fields 1
================================================================================

fields `foo-bar`, action, @message

--------------------------------------------------------------------------------

(source_file
  (fields_statement
    (identifier)
    (identifier)
    (identifier)))
