rs-smithy/common/modules/cloudwatch/tree-sitter-cloudwatch-insights/test/corpus/fields2.txt
================================================================================
Fields 2 (`abs` with subtraction)
================================================================================

fields `foo-bar`, action, abs(f3-f4)

--------------------------------------------------------------------------------

(source_file
  (fields_statement
    (identifier)
    (identifier)
    (call_expression
        (identifier)
        (arguments
            (binary_expression
                (identifier)
                (identifier))))))
