rs-smithy/common/modules/cloudwatch/tree-sitter-cloudwatch-insights/test/corpus/filter/filter1.txt
================================================================================
Filter 1
================================================================================

filter (duration>2000)

--------------------------------------------------------------------------------

(source_file
  (filter_statement
    (parenthesized_expression
        (binary_expression
            (identifier)
            (identifier)))))
