rs-smithy/common/modules/cloudwatch/tree-sitter-cloudwatch-insights/test/corpus/filter/filter3.txt
================================================================================
Filter 3 (`like` operator)
================================================================================

fields f1 | filter statusCode like /2\d\d/

--------------------------------------------------------------------------------

(source_file
  (fields_statement
    (identifier))
  (filter_statement
    (binary_expression
      (identifier)
      (regexp_literal
        (regexp_pattern)))))
