rs-smithy/common/modules/cloudwatch/tree-sitter-cloudwatch-insights/test/corpus/parse2.txt
================================================================================
Parse 2 (regexp)
================================================================================

parse @message /\[(?<level>\S+)\]\s+(?<config>\{.*\})\s+The error was: (?<exception>\S+)/

--------------------------------------------------------------------------------

(source_file
  (parse_statement
    (identifier)
    (regexp_literal
      (regexp_pattern))))
