rs-smithy/common/modules/cloudwatch/tree-sitter-cloudwatch-insights/test/corpus/parse3.txt
================================================================================
Parse 3 (`stats` with `by`)
================================================================================

parse @message /user=(?<user2>.*?), method:(?<method2>.*?), latency := (?<latency2>.*?)/ 
    | stats avg(latency2) by method2, user2

--------------------------------------------------------------------------------

(source_file
  (parse_statement
    (identifier)
    (regexp_literal
      (regexp_pattern)))
  (stats_statement
    (by_expression
      (call_expression
        (identifier)
        (arguments
          (identifier)))
      (expression_sequence
        (identifier)
        (identifier)))))
