rs-smithy/common/modules/cloudwatch/tree-sitter-cloudwatch-insights/test/corpus/sort_fields.txt
================================================================================
Sort Fields
================================================================================

fields f1, f2, f3 | sort f1 desc

--------------------------------------------------------------------------------

(source_file
  (fields_statement
    (identifier)
    (identifier)
    (identifier))
  (sort_statement
    (identifier)
    (sort_order)))
